<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.avans.enviornmentwatcher.LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:src="@drawable/front"/>


    <EditText
        android:id="@+id/editText_Username"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:hint="@string/hint_Username"
        android:inputType="textVisiblePassword"/>

    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:hint="@string/hint_Password"
        android:inputType="textPassword"/>

    <Button
     android:id="@+id/button_Login"
     android:layout_height="0dp"
     android:layout_width="match_parent"
     android:layout_weight="5"
     android:text="@string/button_login"/>



</LinearLayout>
