<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.avans.enviornmentwatcher.ProductSelectorActivity"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:paddingTop="0dp"
        android:paddingBottom="20dp">>

        <TextView
            android:id="@+id/text_Reserved_Product"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/text_Reserved_Product"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/editText_Selected_Product"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/editText_Selected_Product"
            android:layout_gravity="center_horizontal"
            android:editable="false"
            android:inputType="none" />

        <Button
            android:id="@+id/button_Unregister_Product"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/button_Unregister_Product"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/text_Reserved_Product"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp" />

        <Spinner
            android:id="@+id/spinner_Room"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></Spinner>

        <Spinner
            android:id="@+id/spinner_Location"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></Spinner>

        <Button
            android:id="@+id/button_Select_Product"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/button_Unregister_Product"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>



</LinearLayout>
